--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -5,6 +5,7 @@
 
 @import "compass/reset";
 @import "compass/utilities/sprites";
+@import "bootstrap";
 @import "icons/*.png";
 @include all-icons-sprites;
 @import "logos/*.png";
