--- a/app/stylesheets/styles.css
+++ b/app/stylesheets/styles.css
@@ -388,7 +388,7 @@ html {
 /* line 27, ../../../../../.rvm/rubies/ruby-2.0.0-p195/lib/ruby/gems/2.0.0/gems/bootstrap-sass-3.1.0.2/vendor/assets/stylesheets/bootstrap/_scaffolding.scss */
 body {
   font-family: "myriad-pro-n4", "myriad-pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
+  font-size: 14.4px;
   line-height: 1.428571429;
   color: #642a38;
   background-color: transparent;
@@ -552,7 +552,7 @@ h6 .small, .h6 small,
 
 /* line 47, ../../../../../.rvm/rubies/ruby-2.0.0-p195/lib/ruby/gems/2.0.0/gems/bootstrap-sass-3.1.0.2/vendor/assets/stylesheets/bootstrap/_type.scss */
 h1, .h1 {
-  font-size: 36px;
+  font-size: 37px;
 }
 
 /* line 48, ../../../../../.rvm/rubies/ruby-2.0.0-p195/lib/ruby/gems/2.0.0/gems/bootstrap-sass-3.1.0.2/vendor/assets/stylesheets/bootstrap/_type.scss */
@@ -562,7 +562,7 @@ h2, .h2 {
 
 /* line 49, ../../../../../.rvm/rubies/ruby-2.0.0-p195/lib/ruby/gems/2.0.0/gems/bootstrap-sass-3.1.0.2/vendor/assets/stylesheets/bootstrap/_type.scss */
 h3, .h3 {
-  font-size: 24px;
+  font-size: 25px;
 }
 
 /* line 50, ../../../../../.rvm/rubies/ruby-2.0.0-p195/lib/ruby/gems/2.0.0/gems/bootstrap-sass-3.1.0.2/vendor/assets/stylesheets/bootstrap/_type.scss */
@@ -572,12 +572,12 @@ h4, .h4 {
 
 /* line 51, ../../../../../.rvm/rubies/ruby-2.0.0-p195/lib/ruby/gems/2.0.0/gems/bootstrap-sass-3.1.0.2/vendor/assets/stylesheets/bootstrap/_type.scss */
 h5, .h5 {
-  font-size: 14px;
+  font-size: 14.4px;
 }
 
 /* line 52, ../../../../../.rvm/rubies/ruby-2.0.0-p195/lib/ruby/gems/2.0.0/gems/bootstrap-sass-3.1.0.2/vendor/assets/stylesheets/bootstrap/_type.scss */
 h6, .h6 {
-  font-size: 12px;
+  font-size: 13px;
 }
 
 /* line 58, ../../../../../.rvm/rubies/ruby-2.0.0-p195/lib/ruby/gems/2.0.0/gems/bootstrap-sass-3.1.0.2/vendor/assets/stylesheets/bootstrap/_type.scss */
@@ -595,7 +595,7 @@ p {
 @media (min-width: 768px) {
   /* line 62, ../../../../../.rvm/rubies/ruby-2.0.0-p195/lib/ruby/gems/2.0.0/gems/bootstrap-sass-3.1.0.2/vendor/assets/stylesheets/bootstrap/_type.scss */
   .lead {
-    font-size: 21px;
+    font-size: 21.6px;
   }
 }
 
@@ -842,7 +842,7 @@ abbr[data-original-title] {
 blockquote {
   padding: 10px 20px;
   margin: 0 0 20px;
-  font-size: 17.5px;
+  font-size: 18px;
   border-left: 5px solid #eeeeee;
 }
 /* line 233, ../../../../../.rvm/rubies/ruby-2.0.0-p195/lib/ruby/gems/2.0.0/gems/bootstrap-sass-3.1.0.2/vendor/assets/stylesheets/bootstrap/_type.scss */
@@ -941,7 +941,7 @@ pre {
   display: block;
   padding: 9.5px;
   margin: 0 0 10px;
-  font-size: 13px;
+  font-size: 13.4px;
   line-height: 1.428571429;
   word-break: break-all;
   word-wrap: break-word;
@@ -2359,7 +2359,7 @@ legend {
   width: 100%;
   padding: 0;
   margin-bottom: 20px;
-  font-size: 21px;
+  font-size: 21.6px;
   line-height: inherit;
   color: #333333;
   border: 0;
@@ -2419,7 +2419,7 @@ input[type="checkbox"]:focus {
 output {
   display: block;
   padding-top: 7px;
-  font-size: 14px;
+  font-size: 14.4px;
   line-height: 1.428571429;
   color: #c1c1c1;
 }
@@ -2430,7 +2430,7 @@ output {
   width: 100%;
   height: 34px;
   padding: 6px 12px;
-  font-size: 14px;
+  font-size: 14.4px;
   line-height: 1.428571429;
   color: #c1c1c1;
   background-color: white;
@@ -2557,9 +2557,9 @@ input[type="checkbox"],
 .input-sm, .input-group-sm > .form-control,
 .input-group-sm > .input-group-addon,
 .input-group-sm > .input-group-btn > .btn {
-  height: 30px;
+  height: 31px;
   padding: 5px 10px;
-  font-size: 12px;
+  font-size: 13px;
   line-height: 1.5;
   border-radius: 3px;
 }
@@ -2568,8 +2568,8 @@ input[type="checkbox"],
 select.input-sm, .input-group-sm > select.form-control,
 .input-group-sm > select.input-group-addon,
 .input-group-sm > .input-group-btn > select.btn {
-  height: 30px;
-  line-height: 30px;
+  height: 31px;
+  line-height: 31px;
 }
 
 /* line 937, ../../../../../.rvm/rubies/ruby-2.0.0-p195/lib/ruby/gems/2.0.0/gems/bootstrap-sass-3.1.0.2/vendor/assets/stylesheets/bootstrap/_mixins.scss */
@@ -2840,7 +2840,7 @@ select[multiple].input-lg,
   border: 1px solid transparent;
   white-space: nowrap;
   padding: 6px 12px;
-  font-size: 14px;
+  font-size: 14.4px;
   line-height: 1.428571429;
   border-radius: 4px;
   -webkit-user-select: none;
@@ -3139,7 +3139,7 @@ select[multiple].input-lg,
 /* line 124, ../../../../../.rvm/rubies/ruby-2.0.0-p195/lib/ruby/gems/2.0.0/gems/bootstrap-sass-3.1.0.2/vendor/assets/stylesheets/bootstrap/_buttons.scss */
 .btn-sm, .btn-group-sm > .btn {
   padding: 5px 10px;
-  font-size: 12px;
+  font-size: 13px;
   line-height: 1.5;
   border-radius: 3px;
 }
@@ -3147,7 +3147,7 @@ select[multiple].input-lg,
 /* line 128, ../../../../../.rvm/rubies/ruby-2.0.0-p195/lib/ruby/gems/2.0.0/gems/bootstrap-sass-3.1.0.2/vendor/assets/stylesheets/bootstrap/_buttons.scss */
 .btn-xs, .btn-group-xs > .btn {
   padding: 1px 5px;
-  font-size: 12px;
+  font-size: 13px;
   line-height: 1.5;
   border-radius: 3px;
 }
@@ -4253,7 +4253,7 @@ input[type="button"].btn-block {
   padding: 5px 0;
   margin: 2px 0 0;
   list-style: none;
-  font-size: 14px;
+  font-size: 14.4px;
   background-color: white;
   border: 1px solid #cccccc;
   border: 1px solid rgba(0, 0, 0, 0.15);
@@ -4339,7 +4339,7 @@ input[type="button"].btn-block {
 .dropdown-header {
   display: block;
   padding: 3px 20px;
-  font-size: 12px;
+  font-size: 13px;
   line-height: 1.428571429;
   color: #f2f2f2;
 }
@@ -4671,7 +4671,7 @@ input[type="button"].btn-block {
 /* line 64, ../../../../../.rvm/rubies/ruby-2.0.0-p195/lib/ruby/gems/2.0.0/gems/bootstrap-sass-3.1.0.2/vendor/assets/stylesheets/bootstrap/_input-groups.scss */
 .input-group-addon {
   padding: 6px 12px;
-  font-size: 14px;
+  font-size: 14.4px;
   font-weight: normal;
   line-height: 1;
   color: #c1c1c1;
@@ -4685,7 +4685,7 @@ input[type="button"].btn-block {
 .input-group-sm > .input-group-addon,
 .input-group-sm > .input-group-btn > .input-group-addon.btn {
   padding: 5px 10px;
-  font-size: 12px;
+  font-size: 13px;
   border-radius: 3px;
 }
 /* line 81, ../../../../../.rvm/rubies/ruby-2.0.0-p195/lib/ruby/gems/2.0.0/gems/bootstrap-sass-3.1.0.2/vendor/assets/stylesheets/bootstrap/_input-groups.scss */
@@ -5284,8 +5284,8 @@ input[type="button"].btn-block {
 }
 /* line 351, ../../../../../.rvm/rubies/ruby-2.0.0-p195/lib/ruby/gems/2.0.0/gems/bootstrap-sass-3.1.0.2/vendor/assets/stylesheets/bootstrap/_navbar.scss */
 .navbar-btn.btn-sm, .btn-group-sm > .navbar-btn.btn {
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 9.5px;
+  margin-bottom: 9.5px;
 }
 /* line 354, ../../../../../.rvm/rubies/ruby-2.0.0-p195/lib/ruby/gems/2.0.0/gems/bootstrap-sass-3.1.0.2/vendor/assets/stylesheets/bootstrap/_navbar.scss */
 .navbar-btn.btn-xs, .btn-group-xs > .navbar-btn.btn {
@@ -5612,7 +5612,7 @@ input[type="button"].btn-block {
 .pagination-sm > li > a,
 .pagination-sm > li > span {
   padding: 5px 10px;
-  font-size: 12px;
+  font-size: 13px;
 }
 /* line 565, ../../../../../.rvm/rubies/ruby-2.0.0-p195/lib/ruby/gems/2.0.0/gems/bootstrap-sass-3.1.0.2/vendor/assets/stylesheets/bootstrap/_mixins.scss */
 .pagination-sm > li:first-child > a,
@@ -5770,7 +5770,7 @@ input[type="button"].btn-block {
   display: inline-block;
   min-width: 10px;
   padding: 3px 7px;
-  font-size: 12px;
+  font-size: 13px;
   font-weight: bold;
   color: white;
   line-height: 1;
@@ -5829,7 +5829,7 @@ a.list-group-item.active > .badge,
 /* line 16, ../../../../../.rvm/rubies/ruby-2.0.0-p195/lib/ruby/gems/2.0.0/gems/bootstrap-sass-3.1.0.2/vendor/assets/stylesheets/bootstrap/_jumbotron.scss */
 .jumbotron p {
   margin-bottom: 15px;
-  font-size: 21px;
+  font-size: 22px;
   font-weight: 200;
 }
 /* line 22, ../../../../../.rvm/rubies/ruby-2.0.0-p195/lib/ruby/gems/2.0.0/gems/bootstrap-sass-3.1.0.2/vendor/assets/stylesheets/bootstrap/_jumbotron.scss */
@@ -5854,7 +5854,7 @@ a.list-group-item.active > .badge,
   /* line 39, ../../../../../.rvm/rubies/ruby-2.0.0-p195/lib/ruby/gems/2.0.0/gems/bootstrap-sass-3.1.0.2/vendor/assets/stylesheets/bootstrap/_jumbotron.scss */
   .jumbotron h1,
   .jumbotron .h1 {
-    font-size: 63px;
+    font-size: 64.8px;
   }
 }
 
@@ -6028,7 +6028,7 @@ a.thumbnail.active {
   float: left;
   width: 0%;
   height: 100%;
-  font-size: 12px;
+  font-size: 13px;
   line-height: 20px;
   color: white;
   text-align: center;
@@ -6516,7 +6516,7 @@ a.list-group-item-danger.active, a.list-group-item-danger.active:hover, a.list-g
 .panel-title {
   margin-top: 0;
   margin-bottom: 0;
-  font-size: 16px;
+  font-size: 17px;
   color: inherit;
 }
 /* line 165, ../../../../../.rvm/rubies/ruby-2.0.0-p195/lib/ruby/gems/2.0.0/gems/bootstrap-sass-3.1.0.2/vendor/assets/stylesheets/bootstrap/_panels.scss */
@@ -6710,7 +6710,7 @@ a.list-group-item-danger.active, a.list-group-item-danger.active:hover, a.list-g
 /* line 6, ../../../../../.rvm/rubies/ruby-2.0.0-p195/lib/ruby/gems/2.0.0/gems/bootstrap-sass-3.1.0.2/vendor/assets/stylesheets/bootstrap/_close.scss */
 .close {
   float: right;
-  font-size: 21px;
+  font-size: 21.6px;
   font-weight: bold;
   line-height: 1;
   color: black;
@@ -6897,7 +6897,7 @@ button.close {
   z-index: 1030;
   display: block;
   visibility: visible;
-  font-size: 12px;
+  font-size: 13px;
   line-height: 1.4;
   opacity: 0;
   filter: alpha(opacity=0);
@@ -7049,7 +7049,7 @@ button.close {
 .popover-title {
   margin: 0;
   padding: 8px 14px;
-  font-size: 14px;
+  font-size: 14.4px;
   font-weight: normal;
   line-height: 18px;
   background-color: #f7f7f7;
@@ -7590,41 +7590,153 @@ body {
 }
 
 /* line 5, ../sass/_overrides.scss */
+a {
+  color: #642a38;
+}
+/* line 7, ../sass/_overrides.scss */
+a:hover {
+  color: #ca0814;
+  text-decoration: none;
+}
+
+/* line 13, ../sass/_overrides.scss */
+ul {
+  margin-bottom: 0px;
+}
+
+/* line 17, ../sass/_overrides.scss */
 footer {
   background-color: #642a38;
   color: #868686;
   width: 100%;
-  position: relative;
+  position: fixed;
+  padding-top: 25px;
+  padding-bottom: 35px;
+  bottom: 0;
+  left: 0;
 }
 
-/* line 13, ../sass/_overrides.scss */
+/* line 28, ../sass/_overrides.scss */
+.jumbotron:first-of-type {
+  margin-bottom: 0px;
+}
+
+/* line 32, ../sass/_overrides.scss */
 .social-icon {
   display: block;
-  height: 50px;
-  width: 50px;
+  height: 53px;
+  width: 70px;
 }
 
-/* line 19, ../sass/_overrides.scss */
+/* line 38, ../sass/_overrides.scss */
 .social {
   margin: 0 auto;
 }
-/* line 21, ../sass/_overrides.scss */
+/* line 40, ../sass/_overrides.scss */
 .social li {
   display: inline-block;
+  margin-top: 5px;
 }
 
-/* line 26, ../sass/_overrides.scss */
+/* line 46, ../sass/_overrides.scss */
 .current-status {
   margin-top: 5px;
   line-height: 25px;
   text-align: left;
 }
 
-/* line 32, ../sass/_overrides.scss */
+/* line 52, ../sass/_overrides.scss */
 div#cg-masthead-logo {
   height: 99px;
   width: 514px;
   background-image: url("../images/logos/largeLogoWhite.png");
   background-repeat: no-repeat;
   margin: 0 auto;
+}
+
+/* line 60, ../sass/_overrides.scss */
+.main {
+  color: #642a38;
+  font-weight: 400;
+}
+/* line 63, ../sass/_overrides.scss */
+.main h1, .main h2, .main h3, .main h4, .main h5, .main h6 {
+  font-weight: 600;
+}
+/* line 66, ../sass/_overrides.scss */
+.main p {
+  font-size: 18px;
+}
+
+/* line 70, ../sass/_overrides.scss */
+.navbar {
+  border-bottom: 1px solid #c1c1c1;
+  border-top: 1px solid #717172;
+  border-radius: 0px;
+}
+/* line 74, ../sass/_overrides.scss */
+.navbar ul {
+  float: right;
+}
+/* line 76, ../sass/_overrides.scss */
+.navbar ul li {
+  font-family: "proxima-nova-n4", "proxima-nova", Helvetica, Arial, sans-serif;
+  font-size: 18px;
+  display: inline-block;
+  margin-right: 12px;
+  border-left: 1px solid #c1c1c1;
+  min-height: 50px;
+}
+/* line 83, ../sass/_overrides.scss */
+.navbar ul li a {
+  line-height: 50px;
+  padding-left: 12px;
+  text-transform: lowercase;
+}
+
+/* line 92, ../sass/_overrides.scss */
+.icons-email-icon-inactive:hover {
+  background-position: 0 -197px;
+}
+
+/* line 95, ../sass/_overrides.scss */
+.icons-fb-icon-inactive:hover {
+  background-position: 0 -328px;
+}
+
+/* line 98, ../sass/_overrides.scss */
+.icons-pinterest-icon-inactive:hover {
+  background-position: 0 -968px;
+}
+
+/* line 101, ../sass/_overrides.scss */
+.icons-github-icon-inactive:hover {
+  background-position: 0 -466px;
+}
+
+/* line 104, ../sass/_overrides.scss */
+.icons-dribbble-icon-inactive:hover {
+  background-position: 0 -70px;
+}
+
+/* line 107, ../sass/_overrides.scss */
+.icons-insta-icon-inactive:hover {
+  background-position: 0 -595px;
+}
+
+/* line 110, ../sass/_overrides.scss */
+.icons-linkedin-icon-inactive:hover {
+  background-position: 0 -783px;
+}
+
+/* line 113, ../sass/_overrides.scss */
+.icons-twitter-icon-inactive:hover {
+  background-position: 0 -1097px;
+}
+
+/* line 116, ../sass/_overrides.scss */
+.icons-monogram {
+  margin-top: 1px;
+  width: 50px;
+  height: 48px;
 }
