added new partials, started work on works page, added links to bio

--- a/app/stylesheets/styles.css
+++ b/app/stylesheets/styles.css
@@ -7793,3 +7793,9 @@ blockquote {
   font-style: italic;
   margin-top: 250px;
 }
+
+/* line 162, ../sass/_overrides.scss */
+.thumbnail {
+  border-radius: 0px;
+  background-color: white;
+}
