intro page select

--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -1,7 +1,12 @@
 <div class="intro" ng-controller="IntroCtrl">
-	<h1>I am a </h1> 
-		<select ng-model="position" ng-options="p.name for p in positions">
-		</select>
+	<h1>I am a 
+		<span class="select">
+			<select ng-model="position" ng-options="p.name for p in positions">
+			</select>
+			<span class="glyphicon glyphicon-chevron-down">
+			</span>
+		</span>
+	</h1>
 		<br>
 	<p>Available for freelance work or new positions</p>
 </div>
