--- a/app/sass/_overrides.scss
+++ b/app/sass/_overrides.scss
@@ -163,3 +163,30 @@ blockquote {
 	border-radius: 0px;
 	background-color: white;
 }
+.tag {
+	padding: 5px;
+	border: 3px solid $bordeaux;
+	color: $bordeaux;
+	font-size: 14px;
+}
+.select select{
+	background: transparent;
+	color: $crimson;
+	padding: 8px;
+	font-size: 25px;
+	line-height: 28px;
+	min-width: 300px;
+	text-align: center;
+	border-radius: 0;
+	border-color: $gray;
+	-webkit-appearance: none;
+}
+.select .glyphicon{
+	border-left: 1px solid $gray;
+	padding-left: 5px; 
+	position: relative;
+	top: 9px;
+	margin-left: -63px;
+	color: $gray;
+	z-index: -100;
+}
