--- a/app/stylesheets/styles.css
+++ b/app/stylesheets/styles.css
@@ -7798,9 +7798,35 @@ blockquote {
 .thumbnail {
   border-radius: 0px;
   background-color: white;
+  height: 300px;
+  width: 400px;
+}
+/* line 167, ../sass/_overrides.scss */
+.thumbnail.circle {
+  background-color: black;
+}
+/* line 169, ../sass/_overrides.scss */
+.thumbnail.circle img {
+  margin-top: 25%;
+}
+/* line 173, ../sass/_overrides.scss */
+.thumbnail.lyft {
+  background-color: #f1efeb;
+}
+/* line 176, ../sass/_overrides.scss */
+.thumbnail.other {
+  background-color: #fb5b26;
+}
+/* line 180, ../sass/_overrides.scss */
+.thumbnail.photography img {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 400px;
+  height: 299px;
 }
 
-/* line 166, ../sass/_overrides.scss */
+/* line 189, ../sass/_overrides.scss */
 .tag {
   padding: 5px;
   border: 3px solid #642a38;
@@ -7808,21 +7834,21 @@ blockquote {
   font-size: 14px;
 }
 
-/* line 172, ../sass/_overrides.scss */
+/* line 195, ../sass/_overrides.scss */
 .select select {
   background: transparent;
   color: #ca0814;
   padding: 8px;
   font-size: 25px;
   line-height: 28px;
-  min-width: 300px;
+  min-width: 290px;
   text-align: center;
   border-radius: 0;
   border-color: #c1c1c1;
   -webkit-appearance: none;
 }
 
-/* line 184, ../sass/_overrides.scss */
+/* line 207, ../sass/_overrides.scss */
 .select .glyphicon {
   border-left: 1px solid #c1c1c1;
   padding-left: 5px;
