--- a/app/partials/works.html
+++ b/app/partials/works.html
@@ -1,35 +1,35 @@
 <div class="container">
 	<div class="row">
 	  <div class="col-md-4">
-	    <a href="#lyft" class="thumbnail">
-	      <img data-src="holder.js/100%x100" alt="Lyft" >
+	    <a href="#lyft" class="thumbnail lyft">
+	      <img data-src="holder.js/400%x300" alt="Lyft" src="images/lyft-tile.png">
 	    </a>
 	  </div>
 	  <div class="col-md-4">
 	    <a href="#jawbone" class="thumbnail">
-	      <img data-src="holder.js/100%x100" alt="Jawbone" >
+	      <img data-src="holder.js/400%x300" alt="Jawbone" src="images/jawbone-tile.png">
 	    </a>
 	  </div>
 	  <div class="col-md-4">
-	    <a href="#circle" class="thumbnail">
-	      <img data-src="holder.js/100%x100" alt="Circle - The Local Social Network" >
+	    <a href="#circle" class="thumbnail circle">
+	      <img data-src="holder.js/400%x300" alt="Circle - The Local Social Network" src="images/circle-tile.png">
 	    </a>
 	  </div>
 	</div>
 	<div class="row">
 	  <div class="col-md-4">
 	    <a href="#maya" class="thumbnail">
-	      <img data-src="holder.js/100%x100" alt="MAYA Design" >
+	      <img data-src="holder.js/400%x300" alt="MAYA Design" src="images/maya-tile.png" >
 	    </a>
 	  </div>
 	  <div class="col-md-4">
-	    <a href="#other" class="thumbnail">
-	      <img data-src="holder.js/100%x100" alt="Other Projects" >
+	    <a href="#photography" class="thumbnail photography">
+	      <img data-src="holder.js/400%x300" alt="Photography" src="images/photography-tile.png">
 	    </a>
 	  </div>
 	  <div class="col-md-4">
-	    <a href="#photography" class="thumbnail">
-	      <img data-src="holder.js/100%x100" alt="Photography" >
+	    <a href="#other" class="thumbnail other">
+	      <img data-src="holder.js/400%x300" alt="Other Projects" src="images/other-tile.png">
 	    </a>
 	  </div>
 	</div>
