--- a/app/sass/_variables.scss
+++ b/app/sass/_variables.scss
@@ -16,6 +16,8 @@ $gray:                  #c1c1c1;
 $gray-light:            #f2f2f2;   
 $gray-shadow: 					#717172;
 $blue: 									#75b2dd;
+$black: 								#000000;
+$lyft-green: 						#f1efeb;
 
 $bordeaux: 							#642a38;
 $bordeaux-light:			 	#868686;
