--- a/app/sass/_variables.scss
+++ b/app/sass/_variables.scss
@@ -17,6 +17,7 @@ $gray-light:            #f2f2f2;
 $gray-shadow: 					#717172;
 $blue: 									#75b2dd;
 $black: 								#000000;
+$white:									#ffffff;
 $lyft-green: 						#f1efeb;
 
 $bordeaux: 							#642a38;
