--- a/app/stylesheets/styles.css
+++ b/app/stylesheets/styles.css
@@ -7622,30 +7622,35 @@ footer {
 }
 
 /* line 32, ../sass/_overrides.scss */
+.jumbotron {
+  overflow-y: hidden;
+}
+
+/* line 36, ../sass/_overrides.scss */
 .social-icon {
   display: block;
   height: 53px;
   width: 70px;
 }
 
-/* line 38, ../sass/_overrides.scss */
+/* line 42, ../sass/_overrides.scss */
 .social {
   margin: 0 auto;
 }
-/* line 40, ../sass/_overrides.scss */
+/* line 44, ../sass/_overrides.scss */
 .social li {
   display: inline-block;
   margin-top: 5px;
 }
 
-/* line 46, ../sass/_overrides.scss */
+/* line 50, ../sass/_overrides.scss */
 .current-status {
   margin-top: 5px;
   line-height: 25px;
   text-align: left;
 }
 
-/* line 52, ../sass/_overrides.scss */
+/* line 56, ../sass/_overrides.scss */
 div#cg-masthead-logo {
   height: 99px;
   width: 514px;
@@ -7654,31 +7659,31 @@ div#cg-masthead-logo {
   margin: 0 auto;
 }
 
-/* line 60, ../sass/_overrides.scss */
+/* line 64, ../sass/_overrides.scss */
 .main {
   color: #642a38;
   font-weight: 400;
 }
-/* line 63, ../sass/_overrides.scss */
+/* line 67, ../sass/_overrides.scss */
 .main h1, .main h2, .main h3, .main h4, .main h5, .main h6 {
   font-weight: 600;
 }
-/* line 66, ../sass/_overrides.scss */
+/* line 70, ../sass/_overrides.scss */
 .main p {
   font-size: 18px;
 }
 
-/* line 70, ../sass/_overrides.scss */
+/* line 74, ../sass/_overrides.scss */
 .navbar {
   border-bottom: 1px solid #c1c1c1;
   border-top: 1px solid #717172;
   border-radius: 0px;
 }
-/* line 74, ../sass/_overrides.scss */
+/* line 78, ../sass/_overrides.scss */
 .navbar ul {
   float: right;
 }
-/* line 76, ../sass/_overrides.scss */
+/* line 80, ../sass/_overrides.scss */
 .navbar ul li {
   font-family: "proxima-nova-n4", "proxima-nova", Helvetica, Arial, sans-serif;
   font-size: 18px;
@@ -7687,54 +7692,54 @@ div#cg-masthead-logo {
   border-left: 1px solid #c1c1c1;
   min-height: 50px;
 }
-/* line 83, ../sass/_overrides.scss */
+/* line 87, ../sass/_overrides.scss */
 .navbar ul li a {
   line-height: 50px;
   padding-left: 12px;
   text-transform: lowercase;
 }
 
-/* line 92, ../sass/_overrides.scss */
+/* line 96, ../sass/_overrides.scss */
 .icons-email-icon-inactive:hover {
   background-position: 0 -197px;
 }
 
-/* line 95, ../sass/_overrides.scss */
+/* line 99, ../sass/_overrides.scss */
 .icons-fb-icon-inactive:hover {
   background-position: 0 -328px;
 }
 
-/* line 98, ../sass/_overrides.scss */
+/* line 102, ../sass/_overrides.scss */
 .icons-pinterest-icon-inactive:hover {
   background-position: 0 -968px;
 }
 
-/* line 101, ../sass/_overrides.scss */
+/* line 105, ../sass/_overrides.scss */
 .icons-github-icon-inactive:hover {
   background-position: 0 -466px;
 }
 
-/* line 104, ../sass/_overrides.scss */
+/* line 108, ../sass/_overrides.scss */
 .icons-dribbble-icon-inactive:hover {
   background-position: 0 -70px;
 }
 
-/* line 107, ../sass/_overrides.scss */
+/* line 111, ../sass/_overrides.scss */
 .icons-insta-icon-inactive:hover {
   background-position: 0 -595px;
 }
 
-/* line 110, ../sass/_overrides.scss */
+/* line 114, ../sass/_overrides.scss */
 .icons-linkedin-icon-inactive:hover {
   background-position: 0 -783px;
 }
 
-/* line 113, ../sass/_overrides.scss */
+/* line 117, ../sass/_overrides.scss */
 .icons-twitter-icon-inactive:hover {
   background-position: 0 -1097px;
 }
 
-/* line 116, ../sass/_overrides.scss */
+/* line 120, ../sass/_overrides.scss */
 .icons-monogram {
   margin-top: 1px;
   width: 50px;
@@ -7742,7 +7747,7 @@ div#cg-masthead-logo {
   margin-left: 10px;
 }
 
-/* line 123, ../sass/_overrides.scss */
+/* line 127, ../sass/_overrides.scss */
 .intro {
   margin: 0 auto;
   text-align: center;
@@ -7750,42 +7755,42 @@ div#cg-masthead-logo {
   padding-bottom: 100px;
 }
 
-/* line 129, ../sass/_overrides.scss */
+/* line 133, ../sass/_overrides.scss */
 .shot {
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
 
-/* line 134, ../sass/_overrides.scss */
+/* line 138, ../sass/_overrides.scss */
 .about-shot {
   padding-bottom: 20px;
   border-bottom: 1px solid #c1c1c1;
 }
 
-/* line 139, ../sass/_overrides.scss */
+/* line 143, ../sass/_overrides.scss */
 blockquote {
   font-size: 15px;
   margin: 20px;
   border: none;
 }
 
-/* line 144, ../sass/_overrides.scss */
+/* line 148, ../sass/_overrides.scss */
 #background {
   border-top: 1px solid #c1c1c1;
 }
 
-/* line 147, ../sass/_overrides.scss */
+/* line 151, ../sass/_overrides.scss */
 .biography {
   border-right: 1px solid #c1c1c1;
 }
 
-/* line 150, ../sass/_overrides.scss */
+/* line 154, ../sass/_overrides.scss */
 .main-content {
   min-height: 412px;
 }
 
-/* line 154, ../sass/_overrides.scss */
+/* line 158, ../sass/_overrides.scss */
 .bkgrnd-processes blockquote {
   font-size: 18px;
   font-family: "myriad-pro-i4", "myriad-pro";
@@ -7794,30 +7799,30 @@ blockquote {
   margin-top: 250px;
 }
 
-/* line 162, ../sass/_overrides.scss */
+/* line 166, ../sass/_overrides.scss */
 .thumbnail {
   border-radius: 0px;
   background-color: white;
   height: 300px;
   width: 400px;
 }
-/* line 167, ../sass/_overrides.scss */
+/* line 171, ../sass/_overrides.scss */
 .thumbnail.circle {
   background-color: black;
 }
-/* line 169, ../sass/_overrides.scss */
+/* line 173, ../sass/_overrides.scss */
 .thumbnail.circle img {
   margin-top: 25%;
 }
-/* line 173, ../sass/_overrides.scss */
+/* line 177, ../sass/_overrides.scss */
 .thumbnail.lyft {
   background-color: #f1efeb;
 }
-/* line 176, ../sass/_overrides.scss */
+/* line 180, ../sass/_overrides.scss */
 .thumbnail.other {
   background-color: #fb5b26;
 }
-/* line 180, ../sass/_overrides.scss */
+/* line 184, ../sass/_overrides.scss */
 .thumbnail.photography img {
   position: absolute;
   top: 0px;
@@ -7826,7 +7831,7 @@ blockquote {
   height: 299px;
 }
 
-/* line 189, ../sass/_overrides.scss */
+/* line 193, ../sass/_overrides.scss */
 .tag {
   padding: 5px;
   border: 3px solid #642a38;
@@ -7834,7 +7839,7 @@ blockquote {
   font-size: 14px;
 }
 
-/* line 195, ../sass/_overrides.scss */
+/* line 199, ../sass/_overrides.scss */
 .select select {
   background: transparent;
   color: #ca0814;
@@ -7848,7 +7853,7 @@ blockquote {
   -webkit-appearance: none;
 }
 
-/* line 207, ../sass/_overrides.scss */
+/* line 211, ../sass/_overrides.scss */
 .select .glyphicon {
   border-left: 1px solid #c1c1c1;
   padding-left: 5px;
@@ -7857,4 +7862,87 @@ blockquote {
   margin-left: -63px;
   color: #c1c1c1;
   z-index: -100;
+}
+
+/* line 220, ../sass/_overrides.scss */
+.company-headline {
+  margin-top: -20px;
+  height: 250px;
+  border-bottom: 1px solid #c1c1c1;
+}
+/* line 224, ../sass/_overrides.scss */
+.company-headline.lyft {
+  background-color: #f1efeb;
+}
+/* line 227, ../sass/_overrides.scss */
+.company-headline.jawbone, .company-headline.maya {
+  background-color: white;
+}
+/* line 230, ../sass/_overrides.scss */
+.company-headline.other {
+  background-color: #fb5b26;
+}
+/* line 233, ../sass/_overrides.scss */
+.company-headline.circle {
+  background-color: black;
+}
+
+/* line 237, ../sass/_overrides.scss */
+.jawbone .logos-jawbone-logo {
+  width: 400px;
+  height: 166px;
+  margin: -60px auto 0 auto;
+}
+
+/* line 242, ../sass/_overrides.scss */
+.maya-logo {
+  width: 400px;
+  height: 200px;
+  margin: -60px auto 0 auto;
+  background-image: url("../images/maya-tile.png");
+  background-repeat: no-repeat;
+}
+
+/* line 249, ../sass/_overrides.scss */
+.lyft-logo {
+  margin: 0 auto;
+  height: 150px;
+  width: 200px;
+  background-image: url("../images/logos/lyft-logo.png");
+  background-repeat: no-repeat;
+}
+
+/* line 256, ../sass/_overrides.scss */
+.circle-logo {
+  margin: 0 auto;
+  height: 150px;
+  width: 400px;
+  background-image: url("../images/circle-tile.png");
+  background-repeat: no-repeat;
+}
+
+/* line 264, ../sass/_overrides.scss */
+.catlabels ul, .catlabels li {
+  display: inline;
+}
+/* line 267, ../sass/_overrides.scss */
+.catlabels li {
+  margin-left: 10px;
+}
+
+/* line 271, ../sass/_overrides.scss */
+.photog {
+  background-image: url("../images/photogbackground.png");
+  height: 100%;
+  width: 100%;
+  background-position-y: -350px;
+  background-repeat: no-repeat;
+  text-align: center;
+  color: white;
+}
+
+/* line 280, ../sass/_overrides.scss */
+.tagline {
+  text-align: center;
+  color: white;
 }
