added images, carousel, finished lyft pages, cleaned aboutme

--- a/app/partials/circle.html
+++ b/app/partials/circle.html
@@ -12,3 +12,18 @@
 		</ul>
 	</div>
 </div>
+<div class="row work-summary">
+		<blockquote>
+			At Lyft, my work consisted of front-end development (html, css, AngularJS) and often
+			visual/layout design for lyft.me, emails for passengers and drivers, driver support tools, and a
+			redesign for RegionCfg, a tool used for configure and updating Lyft cities and regions.
+		</blockquote>
+</div>
+<div class="row">
+	<div class="col-md-6">
+		fdfdfd 
+	</div>
+	<div class="col-md-6">
+		fdfdfd
+	</div>
+</div>
