--- a/app/partials/jawbone.html
+++ b/app/partials/jawbone.html
@@ -15,3 +15,20 @@
 		</ul>
 	</div>
 </div>
+<div class="row work-summary">
+		<blockquote>
+			At Jawbone, my work primarily consisted of research on behavior tracking and behavior
+			change applications and conceptual flows, along with keynote prototypes of interactions for
+			proposed features in the Jawbone UP app, namely “Today I Will” — a motivational goal creation
+			feature. My other work at Jawbone consisted of front-end development and content updates for
+			the Jawbone support site's redesign and troubleshooting guides.
+		</blockquote>
+</div>
+<div class="row">
+	<div class="col-md-6">
+		fdfdfd 
+	</div>
+	<div class="col-md-6">
+		fdfdfd
+	</div>
+</div>
