--- a/app/partials/maya.html
+++ b/app/partials/maya.html
@@ -12,3 +12,18 @@
 		</ul>
 	</div>
 </div>
+<div class="row work-summary">
+		<blockquote>
+			At MAYA Design, my biggest projects were the development of a front-end bootstrap for
+			Highmark Blue Cross Blue Shield, along with a redesign of Highmark’s Spending Accounts
+			website.
+		</blockquote>
+</div>
+<div class="row">
+	<div class="col-md-6">
+		fdfdfd 
+	</div>
+	<div class="col-md-6">
+		fdfdfd
+	</div>
+</div>
