--- a/app/partials/about.html
+++ b/app/partials/about.html
@@ -17,11 +17,35 @@
 		</blockquote>
 	</div>
 	<div class="col-md-4 bkgrnd-processes">
-		<ul>
-			<li>
-				<blockquote>
-				I like to design by <a href="http://en.wikipedia.org/wiki/Ethnography"><u>researching</u></a> human experience, <a href="http://en.wikipedia.org/wiki/Persona#In_user_experience_design"><u>understanding</u></a> the scope of problems, and <a href="http://en.wikipedia.org/wiki/Storyboarding#Software"><u>envisioning</u></a> future possibilities.</blockquote>
-			</li>
-		</ul>
+		
+		<div id="carousel" class="carousel slide" data-ride="carousel" data-interval="false">
+		  <!-- Indicators -->
+		  <ol class="carousel-indicators bio-carousel">
+		    <li data-target="#carousel" data-slide-to="0" class="active"></li>
+		    <li data-target="#carousel" data-slide-to="1"></li>
+				<li data-target="#carousel" data-slide-to="2"></li>
+		  </ol>
+
+		  <!-- Wrapper for slides -->
+		  <div class="carousel-inner">
+		    <div class="item active">
+					<div>
+					<blockquote>
+					I like to design by <a href="http://en.wikipedia.org/wiki/Ethnography"><u>researching</u></a> human experience, <a href="http://en.wikipedia.org/wiki/Persona#In_user_experience_design"><u>understanding</u></a> the scope of problems, and <a href="http://en.wikipedia.org/wiki/Storyboarding#Software"><u>envisioning</u></a> future possibilities.</blockquote>
+				</div>
+		    </div>
+		    <div class="item">
+					<blockquote>
+						I am an ENTJ that likes to bike, rockclimb, kickbox, and sing.
+					</blockquote>
+		    </div>
+		    <div class="item">
+					<blockquote>
+						<h4>Some of my favorite people: </h4>
+						<a href="http://bysusanlin.com/">Susan</a>, <a href="http://byalicelee.com/">Alice</a>, <a href="http://tessrinearson.com">Tess</a>, <a href="http://jacksonmohsenin.com">Jackson</a>, <a href="ryhan.me">Ryhan</a>, <a href="https://twitter.com/mh">MH</a>, <a href="http://www.abeersleiman.com/"> Abeer</a>, <a href="https://twitter.com/amyquispe">Amy</a>, <a href="https://twitter.com/kevinschaefer">Kevin</a>, <a href="http://http://dorahan.com/">Dorahan</a>, <a href="http://marchaumann.net/">Marc</a>, <a href="http://www.pillaidesign.com/"> Aloke, <a href="http://hcokim.com">Harold</a>, <a href="nlevin.com">Noah</a>, and <a href="http://katherinefrazer.com">Kat</a> 
+					</blockquote>
+		    </div>
+		  </div>
+		</div>
 	</div>
 </div>
