finished jawbone works page, cleaned up about page and lyft page

--- a/app/partials/about.html
+++ b/app/partials/about.html
@@ -2,8 +2,8 @@
 		<img title="headshot" class="shot" src="images/headshot.png" />
 </div>
 <div class="row">
-	<blockquote>
-		Hi! I'm Chris. I'm a designer specializing in product and user experience/interaction design. I studied information systems and human computer interaction at Carnegie Mellon University. One day, I left home for the Bay area and have been exploring ever since. I've worked in mobile social networking, wearables, the shared economy, and human-centered design consulting. I'm a big proponent of leaving things better than how you found them. I want to contribute to something that betters the world. I like to use my engineering background and other skills to augment my design vision. Lately, I've been exploring illustration, photography, and font creation.
+	<blockquote class="brief">
+		Hi! I'm Chris. I'm a designer specializing in product and user experience/interaction design. I studied information systems and human computer interaction at Carnegie Mellon University. One day, I left home for the Bay area and have been exploring ever since. I've worked in mobile social networking, wearables, the shared economy, and human-centered design consulting. I'm a big proponent of leaving things better than how you found them. I want to contribute to something that betters the world. I like to use my engineering background and other skills to augment my design vision. <br/> Lately, I've been exploring illustration, photography, and font creation.
 	</blockquote>
 </div>
 <div id="background" class="row">
@@ -36,7 +36,7 @@
 		    </div>
 		    <div class="item">
 					<blockquote>
-						I am an ENTJ that likes to bike, rockclimb, kickbox, and sing.
+						I am an <a href="http://en.wikipedia.org/wiki/ENTJ">ENTJ</a> that likes to bike, rockclimb, kickbox, and sing.
 					</blockquote>
 		    </div>
 		    <div class="item">
