--- a/app/partials/lyft.html
+++ b/app/partials/lyft.html
@@ -190,10 +190,8 @@
 				passengers, etc. I got to work on ride receipts and driver photo updates to name a few.
 			</h4>
 			<section class="tags">
-				<span class="tag">CSS 3</span>
-				<span class="tag">HTML5</span>
-				<span class="tag">AngularJS</span>
-				<span class="tag">user interfaces</span>
+				<span class="tag">Email Design</span>
+				<span class="tag">Email CSS support</span>
 				<span class="tag">usability</span>
 			</section>
 		</article> 
@@ -254,8 +252,8 @@
 				<span class="tag">CSS 3</span>
 				<span class="tag">HTML5</span>
 				<span class="tag">AngularJS</span>
-				<span class="tag">user interfaces</span>
-				<span class="tag">usability</span>
+				<span class="tag">user flows</span>
+				<span class="tag">visual layout</span>
 			</section>
 		</article> 
 	</div>
