--- a/app/sass/_overrides.scss
+++ b/app/sass/_overrides.scss
@@ -3,9 +3,8 @@ body {
 }
 
 a {
-	color: $bordeaux;
+	color: $crimson;
 	&:hover{
-		color: $crimson;
 		text-decoration: none;
 	}
 }
@@ -321,4 +320,13 @@ blockquote {
 
 .bio-carousel {
 	bottom: -10px;
+}
+.icons-link-icon{
+	width: 50px;
+	height: 50px;
+}
+.brief {
+	font-weight: 600;
+	font-size: $font-size-large;
+	text-align: center;
 }
